<resources>
    <!--Aplicacion-->
    <string name="app_name">Autocald</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_test">Titulo</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--Conjunto Datos mantenimiento-->
    <string name="title_maintenance_data">Datos Mantenimiento</string>
    <string name="menu_customer_data">Datos del cliente</string>
    <string name="menu_equipment_data">Datos del equipo</string>
    <string name="menu_technician_data">Datos del técnico</string>

    <!--Conjunto Estado elementos-->
    <string name="title_condition_elements">Estado de los elementos</string>
    <string name="menu_burner_assembly">Conjunto Quemador</string>
    <string name="menu_security_control">Controles de Seguridad</string>
    <string name="menu_water_level_control">Control de Nivel de Agua</string>
    <string name="menu_condensate_tank">Tanque Condensado</string>
    <string name="menu_water_pump">Bomba de Agua</string>
    <string name="menu_security_test">Pruebas de Seguridad</string>
    <string name="menu_body">Cuerpo</string>
    <string name="menu_electrical_panel_control">Tablero Eléctrico y Control</string>
    <string name="menu_electric_motors">Motores Eléctricos</string>
    <string name="menu_pipes_accessories">Tuberías - Accesorios</string>

    <!--Conjunto Extras-->
    <string name="title_extras">Extras</string>
    <string name="menu_observations">Observaciones</string>
    <string name="menu_recommendation">Recomendaciones</string>
    <string name="menu_photo_management">Administración Fotos</string>

    <!--Conjunto Finalizacion-->
    <string name="title_completion">Finalización</string>
    <string name="menu_document_generation">Generación Documento</string>
    <string name="menu_sent_document">Envió Documento</string>

    <!--Formulario Sliders-->
    <string name="text_status">Estado</string>
    <string name="btn_b">B</string>
    <string name="btn_r">R</string>
    <string name="btn_m">M</string>
    <string name="title_text_observations">Observaciones</string>
    <string name="editText_observations_default">NA</string>
    <string name="text_photos">Fotos</string>
    <string name="text_number_photos">No se han añadido fotos</string>

    <string name="action_reset_form">Limpiar formulario (Actual)</string>
    <string name="action_reset_module">Limpiar modulo (Actual)</string>
    <string name="action_reset_all">Limpiar todo</string>

    <!--Formulario Datos Cliente-->
    <string name="title_service_control">Control de Servicio</string>
    <string name="title_date">Fecha</string>
    <string name="text_date">00/00/00</string>
    <string name="title_type_service">Tipo de Servicio</string>
    <string name="title_client">Cliente</string>
    <string name="title_capacity">Capasidad</string>
    <string name="title_model_year">Modelo - Año</string>

    <!--Formulario Datos Equipo-->
    <string name="title_vapor_pressure">Presion de Vapor</string>
    <string name="title_air_atomization">Atomizacion de aire</string>
    <string name="title_steam_atomization">Atomizacion de vapor</string>
    <string name="title_fuel_temperature">Temperatura de combustible</string>
    <string name="title_fuel_pressure">Presion de combustible</string>
    <string name="title_line_gas_pressure">Presion de Gas Linea</string>
    <string name="title_gas_train_pressure">Presion de Gas Tren</string>
    <string name="title_gas_temperature">Temperatura de Gases</string>
    <string name="title_water_temperature">Temperatura de Agua</string>
    <string name="title_boiler_level">Nivel de Caldera</string>
    <string name="title_condensate_tank_level">Nivel de  Tanq Condensado</string>
    <string name="title_fuel_tank_level">Nivel de Tanq Combustible</string>
    <string name="text_observations_text">Observación</string>
    <string name="text_observations_number">0</string>

    <!--Formulario Datos Tecnico-->
    <string name="title_name_technical">Nombre del Tecnico</string>
    <string name="title_time_start">Hora de Llegada</string>
    <string name="title_time_end">Hora de Salida</string>
    <string name="title_time_total">Horas Hombre</string>
    <string name="text_time">0</string>

    <!--Formulario Observaciones-->
    <string name="title_observations">Observaciones</string>
    <string name="button_add_observations">Agregar</string>
    <string name="button_remove_observations">Remover</string>

    <!--Formulario Observaciones-->
    <string name="title_recommendations">Recomendaciones</string>

    <!--Formulario Adminstrar Fotos-->
    <string name="button_apply">Aplicar Cambios</string>
    <string name="load_data">Cargando información</string>
    <string name="load_images">Cargando imagenes de</string>

    <!--Formulario Firma Digital-->
    <string name="title_instructions">FIRMA</string>
    <string name="button_save">GUARDAR</string>
    <string name="button_clear">LIMPIAR</string>

    <!--Formulario Generar Documento-->
    <string name="button_generate_document">Generar</string>
    <string name="button_sign_document">Firmar</string>
    <string name="button_send_document">Enviar</string>

    <!--Extras-->
    <string name="extra_empty" />

</resources>
