<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
        android:id="@+id/textView_name_technical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="5dp"
        android:text="@string/title_name_technical"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_name_technical"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:ems="13"
            android:inputType="textPersonName"
            android:text="@string/extra_empty"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".5"
            android:background="@android:color/background_dark" />

        <TextView
            android:id="@+id/textView_time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/title_time_start"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_time_start"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:ems="13"
            android:inputType="number"
            android:text="@string/text_time"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".5"
            android:background="@android:color/background_dark" />

        <TextView
            android:id="@+id/textView_time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/title_time_end"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_time_end"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:ems="13"
            android:inputType="number"
            android:text="@string/text_time"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".5"
            android:background="@android:color/background_dark" />

        <TextView
            android:id="@+id/textView_time_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/title_time_total"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_time_total_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_horizontal"
            android:text="@string/text_time"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

</RelativeLayout>