<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryTranslucent"
    tools:context=".ui.digitalSignature.DigitalSignature">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/signLayout"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/title_instructions" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/signLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/signLayout">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="10sp"
            android:background="@null"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/button_clear"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="10sp"
            android:background="@null"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:text="@string/button_save"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>